Added distance to coast example

--- a/maps_r/coastal.bib
+++ b/maps_r/coastal.bib
@@ -206,6 +206,13 @@
   url = {https://laqm.defra.gov.uk/assets/63091defraairqualityguide9web.pdf}
 }
 
+@misc{AirQualityConsultants2023,
+  title = {Air {{Quality Assessment}}: {{Land}} off {{Popes Lane}}, {{Sturry}}},
+  author = {{Air Quality Consultants}},
+  date = {2023-08},
+  url = {Available from Canterbury Planning portal by searching CA/23/01743: https://www.canterbury.gov.uk/planning-and-building/search-and-comment-planning-applications}
+}
+
 @report{airqualityconsultantsAirQualityAssessment2018,
   title = {Air {{Quality Assessment}}: {{Land}} off {{Victoria Road}}, {{Horwich}}, {{Bolton}}},
   author = {{"Air Quality Consultants"}},
@@ -1328,6 +1335,13 @@
   url = {https://www.whatdotheyknow.com/request/568959/response/1367538/attach/html/2/FOI2019%2008443%20response.pdf.html}
 }
 
+@misc{DepartmentforTransport2023,
+  title = {National {{Travel Survey}} 2022: {{Household}} Car Availability and Trends in Car Trips},
+  author = {{Department for Transport}},
+  date = {2023-08-30},
+  url = {https://www.gov.uk/government/statistics/national-travel-survey-2022/national-travel-survey-2022-household-car-availability-and-trends-in-car-trips}
+}
+
 @online{departmentfortransportRoadTrafficForecasts2018,
   title = {Road Traffic Forecasts 2018},
   author = {Department for Transport},
@@ -2291,6 +2305,13 @@
   file = {/home/ash/Zotero/storage/6U2CL69U/Hughes et al. - 2011 - Arsenic Exposure and Toxicology A Historical Pers.pdf;/home/ash/Zotero/storage/8NHX7ZXQ/1685876.html}
 }
 
+@misc{i-Transport2023,
+  title = {Popes {{Lane}}, {{Sturry Transport Assessment Client}}: {{Gladman Development Ltd}} i-{{Transport Ref}}: {{VACE}}/{{ML}}/{{MS}}/{{ITM18367-002B}}},
+  author = {{i-Transport}},
+  date = {2023-08-04},
+  url = {Available from Canterbury Planning portal by searching CA/23/01743: https://www.canterbury.gov.uk/planning-and-building/search-and-comment-planning-applications}
+}
+
 @article{iacobucciUrgentActionUK2016,
   title = {Urgent Action on {{UK}} Air Pollution Is Needed, Say Experts},
   author = {Iacobucci, Gareth},
@@ -2355,6 +2376,14 @@
   date = {2019-05},
   institution = {{"Air Quality Consultants"}},
   url = {https://www.aqconsultants.co.uk/CMSPages/GetFile.aspx?guid=419087f2-8362-4e43-9c6a-567126fd1fe8}
+}
+
+@misc{InstituteofAirQualityManagement.EnvironmentalProtectionUK2017,
+  title = {Land-{{Use Planning}} \& {{Development Control}}: {{Planning For Air Quality}}},
+  author = {{Institute of Air Quality Management} and {Environmental Protection UK}},
+  date = {2017-01},
+  url = {https://iaqm.co.uk/text/guidance/air-quality-planning-guidance.pdf},
+  urldate = {2023-11-06}
 }
 
 @online{IntegratingSoftwareTesting,
